# kenafold

./: CLAUDE.md  PLAN-PREVIEW-AND-RUN.md  PLAN.md  README.md  ROADMAP.md  TASKS.md  package.json  turbo.json  vite.config.ts
.github/workflows/: release.yml
.turbo/cache/: 4fbd0dcd03af9f00-manifest.json  4fbd0dcd03af9f00-meta.json  4fbd0dcd03af9f00.tar.zst  f148d12c420d3faa-manifest.json  f148d12c420d3faa-meta.json
apps/app/: package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
apps/app/e2e/: file-explorer.spec.ts  fixtures.ts
apps/app/scripts/: kenafold
apps/app/scripts/homebrew/: kenafold.rb
apps/app/src/: main.tsx
apps/app/src-tauri/: Cargo.toml  Entitlements.plist  tauri.conf.json
apps/app/src-tauri/icons/: icon.icns
apps/app/src-tauri/src/: archive.rs  comparator.rs  fs.rs  hash.rs  lib.rs  path_safety.rs  preview.rs  search.rs  smb.rs  system.rs  terminal.rs  watcher.rs
apps/app/src/app/: providers.tsx
apps/app/src/hooks/: use-mobile.ts
apps/native/: package.json
apps/native/src/: index.css
apps/native/src/app/: App.tsx
apps/web/: app.config.ts  package.json  tsconfig.json
apps/web/app/: ssr.tsx
apps/web/app/routes/: __root.tsx  index.tsx
apps/web/app/styles/: globals.css
src/: index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: archive.rs  fs.rs  grep.rs  lib.rs  smb.rs  tags.rs  watcher.rs
src/app/: App.tsx
src/components/ui/: sidebar.tsx
src/features/file-explorer/components/: archive-progress-panel.tsx  context-menu.tsx  disk-usage-panel.tsx  file-grid.tsx  file-row.test.tsx  file-table.tsx  file-tile.test.tsx  filter-bar.tsx  folder-comparator-panel.tsx  hash-panel.tsx  pane.tsx  (+6 more)
src/features/hotkeys/: registry.ts
(+102 files in other folders)
